# Rtype

./: .clang-format  .cspell.json  .gitignore  .mega-linter.yml  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  vcpkg.json
AAA2ndGame/: CMakeLists.txt
AAA2ndGame/Assets/: patronBg.json  patronBgMenu.json  patronBttn.json  patronDuck.json  patronGrass.json  patronScore.json  patronScoreBoard.json  sceneGame.json  sceneGameOver.json  sceneMenu.json
AAA2ndGame/Assets/config/: Animations.txt
AAA2ndGame/src/: components.hpp  main.cpp  scripts.hpp  systems.hpp
Common/: CommonCommands.hpp  TcpProtoCommands.hpp  UdpProtoCommands.hpp
bj/: CMakeLists.txt  Patrons.hpp  components.hpp  main.cpp  scenes.hpp  systems.hpp
bootstrap/: entity.hpp  main.cpp  registry.hpp  sparse_array.hpp
client/: CMakeLists.txt  CTestTestfile.cmake
client/game/: AllyPatron.hpp  BackgroundPatron.hpp  BasicWallPatron.hpp  BlastPatron.hpp  BlockWallPatron.hpp  BorderPatron.hpp  BossBulletPatron.hpp  BossOneMiniPatron.hpp  BossOnePatron.hpp  BulletPatron.hpp  ButtonPatron.hpp  ChatMessagesPatron.hpp  EnemyBulletPatron.hpp  EnemyCrabPatron.hpp  EnemyPatron.hpp  EnemyPlanePatron.hpp  EnemyRobotPatron.hpp  EnemyTurretPatron.hpp  LobbyPatron.hpp  MenuBackgroundPatron.hpp  MiniBossBulletPatron.hpp  PlayerPatron.hpp  RobotBulletPatron.hpp  RoomPatron.hpp  Scenes.hpp  TitlePatron.hpp  WaterWallPatron.hpp  components.hpp  events.hpp  game.cpp  systems.hpp
client/include/: Arguments.hpp  ClientError.hpp  Core.hpp  game.hpp  macro.hpp
client/include/graphic/: ADisplayModule.hpp  IDisplayModule.hpp  Sfml.cpp  Sfml.hpp
client/include/networking/: Client.hpp  TcpClient.hpp
client/src/: Arguments.cpp  Core.cpp  main.cpp
client/src/networking/: Client.cpp  TcpClient.cpp
client/src/test/: Arguments.test.cpp  main.test.cpp
client_build/: CTestTestfile.cmake
docs/: assets.html  cicd.html  engine.html  getting-start.html  graphical.html  protocol.html  server.html
engine/: CMakeLists.txt  Console.cpp  Console.hpp  Engine.cpp  Engine.hpp  Events.hpp  InputsController.hpp  Patron.hpp  Scene.hpp  events.hpp  main.cpp
engine/components/: collidable.hpp  controllable.hpp
engine/ecs/: Engine.hpp  components.hpp  ecs.hpp  entitie.hpp  events.hpp  indexed_zipper.hpp  registry.hpp  sparse_array.hpp  zipper.hpp  zipper_iterator.hpp
engine/events/: collision.hpp
engine/graphic/: ADisplayModule.hpp  IDisplayModule.hpp
engine/graphic/Assets/config/: Animations.txt  Settings.txt
engine/graphic/Assets/shaders/: Bloom.frag  Blur.frag  GreyScale.frag  Pixelate.frag  Protanopia.frag
engine/graphic/includes/: ADisplayModule.hpp  IDisplayModule.hpp  macro.hpp
engine/graphic/sfml/: Button.cpp  CMakeLists.txt  HPBar.cpp  Sfml.cpp  Sfml.hpp
engine/graphic/sfml/include/: Button.hpp  HPBar.hpp  Sfml.hpp
engine/libHolder/: ILibHolder.hpp  LinuxLibHolder.hpp
engine/libHolder/linux/: LibHolder.hpp
engine/libHolder/win/: LibHolder.hpp
engine/modules/: AModule.hpp  CMakeLists.txt  IModule.hpp
engine/modules/NewModule/: CMakeLists.txt  new.cpp  new.hpp
engine/modules/NewModulecopy/: CMakeLists.txt  new.cpp  new.hpp
engine/modules/ProuteModule/: CMakeLists.txt  proute.cpp  proute.hpp
engine/modules/collision/: components.hpp  events.hpp  hitbox.hpp  systems.hpp
engine/modules/controller/: InputsController.hpp  components.hpp  events.hpp  systems.cpp  systems.hpp
engine/modules/display/: components.hpp  events.hpp  systems.hpp
engine/modules/move/: components.hpp  systems.hpp
engine/modules/movement/: components.hpp  events.hpp  hitbox.hpp  systems.hpp
engine/modules/network/: components.hpp  systems.hpp
engine/modules/test/: CMakeLists.txt  test.cpp  test.hpp
engine/modules/textzone/: components.hpp  systems.hpp
engine/modules/timer/: components.hpp
engine/systems/: check_collidables.hpp  controllable.hpp
engine/utils/: hitbox.hpp  inputsUtils.hpp  positions.hpp
include/: macro.hpp
network/: CMakeLists.txt
network/include/: Commands.hpp  IClient.hpp  IServer.hpp  Input.hpp  Network_client.hpp  Network_server.hpp
network/src/: Network_client.cpp  Network_server.cpp
network/tcp/: CMakeLists.txt
network/tcp/conf/: cmd.json
network/tcp/include/: Client.hpp  Connection.hpp  Lobby.hpp  Server.hpp  queue.hpp
network/tcp/include/Commands/: ACommand.hpp  FactoryCmd.hpp  GetAllLobby.hpp  GetLobby.hpp  ICommand.hpp  Join.hpp  Launch.hpp
network/tcp/src/: Client.cpp  Lobby.cpp  Server.cpp  queue.cpp
network/tcp/src/Commands/: FactoryCmd.cpp  GetAllLobby.cpp  GetLobby.cpp  Join.cpp  Launch.cpp
network/udp/: CMakeLists.txt
network/udp/include/: Client.hpp  Commands.hpp  IClient.hpp  IServer.hpp  Input.hpp  Network_client.hpp  Network_server.hpp  Server.hpp
network/udp/src/: Client.cpp  Network_client.cpp  Network_server.cpp  Server.cpp
server/: CMakeLists.txt
server/game/: BasicWallPatron.hpp  BlockWallPatron.hpp  BossBulletPatron.hpp  BossOneMiniPatron.hpp  BossOnePatron.hpp  BulletPatron.hpp  EnemyBulletPatron.hpp  EnemyCrabPatron.hpp  EnemyPatron.hpp  EnemyPlanePatron.hpp  EnemyRobotPatron.hpp  EnemyTurretPatron.hpp  Game.cpp  GameServer.cpp  MiniBossBulletPatron.hpp  PlanePatron.hpp  PlayerPatron.hpp  RobotBulletPatron.hpp  Scenes.hpp  WaterWallPatron.hpp  components.hpp  error_handling.cpp  events.hpp  game.cpp  response.cpp  systems.hpp
server/game/Commands/: tcp_game_cmd.cpp  utils.cpp
server/game/Commands/tcp/: game_cmd.cpp
server/game/Commands/udp/: game_cmd.cpp
server/include/: Arguments.hpp  Core.hpp  Game.hpp  GameServer.hpp  GamerT.hpp  Lobby.hpp  ServerError.hpp  game.hpp  macro.hpp  tcp_cmds.hpp
server/include/networking/: Client.hpp  Lobby.hpp  Server.hpp
server/include/networking/tcp/: Connection.hpp
server/lobby/: Lobby.cpp  error_handling.cpp  response.cpp  utils.cpp
server/lobby/Commands/: action.cpp  delete.cpp  get.cpp  set.cpp  update.cpp
server/src/: Arguments.cpp  Core.cpp  main.cpp
server/src/networking/: Client.cpp  Lobby.cpp  Server.cpp
server/src/test/: Arguments.test.cpp  Network.test.cpp
src/: main.cpp
(+25 files in other folders)
